Fixed buffer overflow in draw_rate, exposed in 64 sistems due to extended precision in floating point values. Thanks to Andreas Westin for noticing this. Bumped version to 0.4.13.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1561]

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+WMND 0.4.13:
+
+	* Fixed crash due to buffer overflow on 64bit systems.
+
+
 WMND 0.4.12:
 
 	* Executed processes are no longer left as zombies.
